DefaultIngressClass/ingressclass-alb.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: example.com/alb-controller
