DefaultIngressClass/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5678
  selector:
    app: echo
  type: ClusterIP
