DefaultIngressClass/test-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-alb
spec:
  ingressClassName: alb
  rules:
    - host: alb.example.com
      http:
        paths:
          - backend:
              service:
                name: echo-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
