DefaultIngressClass/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: echo-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
